// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailPane calls \`swap\` onChange 1`] = `
[
  "updateEntity",
  "lock",
  1,
  "setEmail",
  "newUser@example.com",
  false,
]
`;

exports[`EmailPane renders correctly 1`] = `
<DocumentFragment>
  <div
    data-__type="email_input"
    data-autocomplete="false"
    data-disabled="false"
    data-invalidhint="invalidErrorHint"
    data-isvalid="false"
    data-lockid="1"
    data-placeholder="placeholder"
    data-value="user@example.com"
  />
</DocumentFragment>
`;

exports[`EmailPane sets \`blankErrorHint\` when username is empty 1`] = `
<DocumentFragment>
  <div
    data-__type="email_input"
    data-autocomplete="false"
    data-disabled="false"
    data-invalidhint="blankErrorHint"
    data-isvalid="false"
    data-lockid="1"
    data-placeholder="placeholder"
  />
</DocumentFragment>
`;

exports[`EmailPane sets autoComplete to true when \`allowAutocomplete\` is true 1`] = `
<DocumentFragment>
  <div
    data-__type="email_input"
    data-autocomplete="true"
    data-disabled="false"
    data-invalidhint="invalidErrorHint"
    data-isvalid="false"
    data-lockid="1"
    data-placeholder="placeholder"
    data-value="user@example.com"
  />
</DocumentFragment>
`;

exports[`EmailPane sets isValid as true when \`isFieldVisiblyInvalid\` is false 1`] = `
<DocumentFragment>
  <div
    data-__type="email_input"
    data-autocomplete="false"
    data-disabled="false"
    data-invalidhint="invalidErrorHint"
    data-isvalid="true"
    data-lockid="1"
    data-placeholder="placeholder"
    data-value="user@example.com"
  />
</DocumentFragment>
`;
